[gd_scene load_steps=18 format=3 uid="uid://bs1arl1qxtn34"]

[ext_resource type="PackedScene" uid="uid://dyew0xxkd3tjw" path="res://game/actor/shooting_actor.tscn" id="1_lmqdd"]
[ext_resource type="Script" path="res://game/actor/enemies/witch/witch.gd" id="1_w2ifd"]
[ext_resource type="Texture2D" uid="uid://ou6q7we48gkw" path="res://assets/graphics/FlyingLevel/Witch.png" id="2_d0chx"]
[ext_resource type="Texture2D" uid="uid://buoklgn5jc7hn" path="res://assets/graphics/FlyingLevel/Witch-cloth.png" id="3_tcskb"]
[ext_resource type="Script" path="res://components/move_components/move_steady_component.gd" id="5_t6atg"]
[ext_resource type="Script" path="res://components/move_components/move_chase_component.gd" id="6_uqa4w"]
[ext_resource type="Script" path="res://components/move_components/move_fall_component.gd" id="7_45adp"]
[ext_resource type="PackedScene" uid="uid://dmtwk63vyvfnv" path="res://game/actor/enemies/witch/witch_zap.tscn" id="8_0hur6"]
[ext_resource type="Script" path="res://components/color_flicker_component.gd" id="8_i3gf4"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_hkt7b"]
[ext_resource type="PackedScene" uid="uid://boryxbcca7kbq" path="res://game/items/magic/magic_explosion.tscn" id="11_mw6o3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gs0bh"]
atlas = ExtResource("2_d0chx")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_stp2r"]
atlas = ExtResource("2_d0chx")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_prikf"]
atlas = ExtResource("2_d0chx")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqwm0"]
atlas = ExtResource("2_d0chx")
region = Rect2(72, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_4b46h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs0bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stp2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prikf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqwm0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_24y8r"]
radius = 17.64

[node name="Witch" instance=ExtResource("1_lmqdd")]
script = ExtResource("1_w2ifd")
spawn_time = 1
random_spawntime = false
bullet_speed = 200
score = 400
has_target = true

[node name="Body" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_4b46h")

[node name="Dress" type="Sprite2D" parent="." index="1"]
texture = ExtResource("3_tcskb")

[node name="MoveSteadyComponent" type="Node" parent="MoveComponent" index="0"]
script = ExtResource("5_t6atg")
speed = 50.0
direction = Vector2(-1, 0)

[node name="MoveFallComponent" type="Node" parent="MoveComponent" index="1"]
script = ExtResource("7_45adp")
acceleration = 5.0

[node name="MoveChaseComponent" type="Node" parent="MoveComponent" index="2"]
script = ExtResource("6_uqa4w")

[node name="SpawnerComponent" parent="." index="3"]
what_to_spawn = ExtResource("8_0hur6")

[node name="FireRateTimer" parent="." index="4"]
one_shot = true

[node name="ShootingMarker" parent="." index="5"]
position = Vector2(-17, 3)

[node name="ColorFlickerComponent" type="Node" parent="." index="7" node_paths=PackedStringArray("sprite")]
script = ExtResource("8_i3gf4")
sprite = NodePath("../Dress")

[node name="HurtboxComponent" parent="." index="8"]
collision_layer = 2

[node name="DetectionArea" type="Area2D" parent="." index="9"]
collision_layer = 0

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource("CircleShape2D_24y8r")

[node name="HitboxComponent" parent="." index="10"]
collision_layer = 0
damage = 450

[node name="ExplosionSpawner" type="Node2D" parent="." index="13"]
script = ExtResource("10_hkt7b")
what_to_spawn = ExtResource("11_mw6o3")
